[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ProxyTexture" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 13.4315, 10 )

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 20, 20 )
scale = Vector2( 20, 20 )
texture = SubResource( 2 )
offset = Vector2( -0.5, -0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 10, 10 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerDetection" type="RayCast2D" parent="."]
position = Vector2( 10, 9.6 )
enabled = true
cast_to = Vector2( 0, 35 )

[node name="Hitbox" type="Area2D" parent="PlayerDetection"]
position = Vector2( 0, 30.026 )
rotation = 1.5708
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection/Hitbox"]
position = Vector2( -6.10297, 0.0657697 )
shape = SubResource( 4 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="PlayerDetection/Hitbox" to="." method="_on_Hitbox_body_entered"]
